--- a/package.json
+++ b/package.json
@@ -13,15 +13,14 @@
   },
   "dependencies": {
     "bootstrap": "^4.1.3",
-    "bootstrap-vue": "^2.0.0",
+    "bootstrap-vue": "^2.7.0",
     "chart.js": "^2.9.3",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
-    "klinecharts": "^4.1.0",
     "node-sass": "^4.13.1",
     "nuxt": "^2.0.0",
     "sass-loader": "^8.0.2",
-    "vue-chartjs": "^3.5.0"
+    "trading-vue-js": "^0.4.4"
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
